--- a/deliverables/WP5/D5.4/DESCARWIN report D5.4.tex
+++ b/deliverables/WP5/D5.4/DESCARWIN report D5.4.tex
@@ -50,8 +50,8 @@
 
 \revision{-}
 
-\setlength{\parindent}{0cm}
-\setlength{\parskip}{2ex plus 0.5ex minus 0.2ex}
+%\setlength{\parindent}{0cm}
+%\setlength{\parskip}{2ex plus 0.5ex minus 0.2ex}
 
 
 % Pour réduire globalement l'espace entre les items d'une liste
