--- a/deliverables/WP5/D5.4/D_5_4.bib
+++ b/deliverables/WP5/D5.4/D_5_4.bib
@@ -66,3 +66,15 @@ pages={269-285}
   year = 2002
 }
 
+@article{DBLP:journals/corr/abs-1107-0052,
+  author    = {J{\"o}rg Hoffmann and
+               Julie Porteous and
+               Laura Sebastia},
+  title     = {Ordered Landmarks in Planning},
+  journal   = {CoRR},
+  volume    = {abs/1107.0052},
+  year      = {2011},
+  ee        = {http://arxiv.org/abs/1107.0052},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
